--- a/app/src/main/res/layout/activity_image_large.xml
+++ b/app/src/main/res/layout/activity_image_large.xml
@@ -16,6 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="返回"
-        android:layout_margin="20dp"/>
+        android:textColor="@color/white"
+        android:background="@drawable/selector_btn_bg"
+        android:layout_margin="30dp"/>
 
 </FrameLayout>
