--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,23 +21,16 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:gravity="center_vertical"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp">
 
-            <Button
-                android:id="@+id/btn_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="返回"/>
-
-            <Button
-                android:id="@+id/btn_slide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="幻灯片"/>
+            <ImageView
+                android:id="@+id/iv_back"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/icon_back_white"
+                android:layout_centerVertical="true"/>
 
         </RelativeLayout>
 
@@ -52,21 +45,102 @@
             android:layout_height="120dp"
             android:gravity="center_horizontal">
 
-            <Button
-                android:id="@+id/btn_nature"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="自然风景"
-                android:layout_marginRight="10dp"/>
+                android:orientation="vertical"
+                android:layout_marginRight="10dp"
+                android:gravity="center">
 
-            <Button
-                android:id="@+id/btn_local"
+                <com.js.photoalbum.view.CircleImageView
+                    android:id="@+id/btn_nature"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/nature_circle"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:id="@+id/tv_nature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="自然风景"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="5dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="本机照片"
-                android:layout_marginRight="10dp"/>
+                android:orientation="vertical"
+                android:layout_marginRight="10dp"
+                android:gravity="center">
+
+                <com.js.photoalbum.view.CircleImageView
+                    android:id="@+id/btn_local"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/local_circle"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:id="@+id/tv_local"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="本机照片"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="5dp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_slide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/selector_btn_bg"
+        android:text="幻灯片"
+        android:textColor="@color/white" />
+
+    <LinearLayout
+        android:id="@+id/ll_slide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginRight="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/btn_slide"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/selector_linearlayout_bg"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/btn_start_slide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_slide_bg"
+            android:text="播放幻灯片" />
+
+        <Button
+            android:id="@+id/btn_setting_slide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_slide_bg"
+            android:text="设置幻灯片" />
+
+        <Button
+            android:id="@+id/btn_clear_slide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_slide_bg"
+            android:text="清空幻灯片" />
 
     </LinearLayout>
 
