--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,8 @@
         <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item><!--控制刘海处显示信息-->
         <item name="android:windowTranslucentNavigation" tools:targetApi="kitkat">true</item>
     </style>
+
+    <style name="dialog_soft_input" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowSoftInputMode">stateVisible|adjustPan</item>
+    </style>
 </resources>
