--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp">
 
@@ -104,7 +104,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="32dp"
         android:background="@drawable/selector_btn_bg"
         android:text="幻灯片"
         android:textColor="@color/white" />
@@ -126,21 +126,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/selector_slide_bg"
-            android:text="播放幻灯片" />
+            android:text="播放幻灯片"
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/btn_setting_slide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/selector_slide_bg"
-            android:text="设置幻灯片" />
+            android:text="设置幻灯片"
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/btn_clear_slide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/selector_slide_bg"
-            android:text="清空幻灯片" />
+            android:text="清空幻灯片"
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/black"/>
 
     </LinearLayout>
 
