--- a/app/src/main/res/layout/dialog_slide.xml
+++ b/app/src/main/res/layout/dialog_slide.xml
@@ -23,13 +23,17 @@
             android:id="@+id/et_speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="设置幻灯片速度(0~20000ms)"
-            android:inputType="number"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:gravity="center"
+            android:hint="设置幻灯播放速度(1000~120000ms)"
+            android:inputType="number"
             android:maxLength="9"
-            android:layout_marginTop="10dp"/>
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@drawable/selector_edittext_bg"
+            android:padding="10dp"/>
 
         <RadioGroup
             android:id="@+id/rg_type"
@@ -44,13 +48,15 @@
                 android:id="@+id/rb_fade_in"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="淡入" />
+                android:text="淡入"
+                android:textColor="@color/black"/>
 
             <RadioButton
                 android:id="@+id/rb_cube"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="魔方" />
+                android:text="魔方"
+                android:textColor="@color/black"/>
 
         </RadioGroup>
 
