--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="自然风景"
-                    android:textColor="@color/white"
+                    android:textColor="@android:color/darker_gray"
                     android:layout_marginTop="5dp"/>
 
             </LinearLayout>
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="本机照片"
-                    android:textColor="@color/white"
+                    android:textColor="@android:color/darker_gray"
                     android:layout_marginTop="5dp"/>
 
             </LinearLayout>
