--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="kelaiyin_blue">#FF002FA7</color>
     <color name="red">#FFFF0000</color>
-    <color name="gray">#aaa</color>
+    <color name="gray">#686868</color>
 </resources>
