--- a/app/src/main/res/layout/dialog_slide.xml
+++ b/app/src/main/res/layout/dialog_slide.xml
@@ -42,20 +42,21 @@
             android:orientation="horizontal"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
-            android:checkedButton="@id/rb_fade_in">
+            android:layout_marginTop="5dp"
+            android:checkedButton="@id/rb_smooth">
 
             <RadioButton
-                android:id="@+id/rb_fade_in"
+                android:id="@+id/rb_smooth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="淡入"
+                android:text="平滑"
                 android:textColor="@color/black"/>
 
             <RadioButton
-                android:id="@+id/rb_cube"
+                android:id="@+id/rb_reduce"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="魔方"
+                android:text="缩小"
                 android:textColor="@color/black"/>
 
         </RadioGroup>
