--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,55 +46,62 @@
             android:gravity="center"
             android:layout_marginBottom="30dp">
 
-            <LinearLayout
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:layout_marginRight="10dp"-->
+<!--                android:gravity="center">-->
+
+<!--                <com.js.photoalbum.view.CircleImageView-->
+<!--                    android:id="@+id/btn_nature"-->
+<!--                    android:layout_width="80dp"-->
+<!--                    android:layout_height="80dp"-->
+<!--                    android:src="@drawable/nature_circle"-->
+<!--                    android:scaleType="centerCrop" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_nature"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="自然风景"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:layout_marginTop="5dp"/>-->
+
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:layout_marginRight="10dp"-->
+<!--                android:gravity="center">-->
+
+<!--                <com.js.photoalbum.view.CircleImageView-->
+<!--                    android:id="@+id/btn_local"-->
+<!--                    android:layout_width="80dp"-->
+<!--                    android:layout_height="80dp"-->
+<!--                    android:src="@drawable/local_circle"-->
+<!--                    android:scaleType="centerCrop" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_local"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="本机照片"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:layout_marginTop="5dp"/>-->
+
+<!--            </LinearLayout>-->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginRight="10dp"
-                android:gravity="center">
-
-                <com.js.photoalbum.view.CircleImageView
-                    android:id="@+id/btn_nature"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/nature_circle"
-                    android:scaleType="centerCrop" />
-
-                <TextView
-                    android:id="@+id/tv_nature"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="自然风景"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginRight="10dp"
-                android:gravity="center">
-
-                <com.js.photoalbum.view.CircleImageView
-                    android:id="@+id/btn_local"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/local_circle"
-                    android:scaleType="centerCrop" />
-
-                <TextView
-                    android:id="@+id/tv_local"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="本机照片"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"/>
-
-            </LinearLayout>
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp" />
 
         </LinearLayout>
 
