--- a/app/src/main/res/layout/item_large.xml
+++ b/app/src/main/res/layout/item_large.xml
@@ -10,6 +10,6 @@
         android:id="@+id/iv_large"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
