--- a/app/src/main/res/drawable/selector_btn_bg.xml
+++ b/app/src/main/res/drawable/selector_btn_bg.xml
@@ -3,14 +3,14 @@
 
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/kelaiyin_blue" />
+            <solid android:color="@color/light_white" />
             <corners android:radius="50dp"/>
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_blue_light" />
+            <solid android:color="@color/white" />
             <corners android:radius="50dp"/>
         </shape>
     </item>
