--- a/app/src/main/res/layout/dialog_slide.xml
+++ b/app/src/main/res/layout/dialog_slide.xml
@@ -15,51 +15,91 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="幻灯片设置"
+            android:text="画框设置"
             android:textColor="@color/black"
             android:layout_marginTop="20dp"/>
 
-        <EditText
-            android:id="@+id/et_speed"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:gravity="center"
-            android:hint="设置幻灯播放速度(1000~120000ms)"
-            android:inputType="number"
-            android:maxLength="9"
-            android:textColor="@color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:background="@drawable/selector_edittext_bg"
-            android:padding="10dp"/>
+            android:layout_marginRight="20dp">
 
-        <RadioGroup
-            android:id="@+id/rg_type"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="滚动速度："
+                android:textColor="@color/gray"/>
+
+            <EditText
+                android:id="@+id/et_speed"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:hint="设置画框滚动速度(1000~120000ms)"
+                android:inputType="number"
+                android:maxLength="9"
+                android:textColor="@color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:background="@drawable/selector_edittext_bg"
+                android:padding="10dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ms"
+                android:textColor="@color/gray"
+                android:layout_marginLeft="5dp"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            android:layout_marginTop="5dp"
-            android:checkedButton="@id/rb_smooth">
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp">
 
-            <RadioButton
-                android:id="@+id/rb_smooth"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="平滑"
-                android:textColor="@color/black"/>
+                android:text="滚动特效："
+                android:textColor="@color/gray"/>
 
-            <RadioButton
-                android:id="@+id/rb_reduce"
+
+            <RadioGroup
+                android:id="@+id/rg_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="缩小"
-                android:textColor="@color/black"/>
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:checkedButton="@id/rb_smooth">
 
-        </RadioGroup>
+                <RadioButton
+                    android:id="@+id/rb_smooth"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="平滑"
+                    android:textColor="@color/black"/>
+
+                <RadioButton
+                    android:id="@+id/rb_reduce"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="缩小"
+                    android:textColor="@color/black"/>
+
+            </RadioGroup>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
