--- a/app/src/main/res/layout/item_bottom.xml
+++ b/app/src/main/res/layout/item_bottom.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:gravity="center"
-    android:layout_gravity="center"
-    android:layout_marginRight="15dp">
+    android:layout_marginRight="15dp"
+    android:fitsSystemWindows="false"
+    android:layout_gravity="center">
 
     <com.js.photoalbum.view.CircleImageView
         android:id="@+id/iv_name"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/nature_circle"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:layout_above="@id/tv_name"/>
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="自然风景"
-        android:textStyle="bold"
+        android:textSize="14sp"
         android:textColor="@color/white"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
-</LinearLayout>
+</RelativeLayout>
