--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_white">#FFC9D0E1</color>
     <color name="kelaiyin_blue">#FF002FA7</color>
     <color name="red">#FFFF0000</color>
     <color name="gray">#686868</color>
