--- a/app/src/main/res/layout/item_slide.xml
+++ b/app/src/main/res/layout/item_slide.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_slide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
