--- a/app/src/main/res/drawable/selector_linearlayout_bg.xml
+++ b/app/src/main/res/drawable/selector_linearlayout_bg.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="false">
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners android:radius="2dp" />
-        </shape>
-    </item>
-
-</selector>
+    <solid android:color="@color/white" />
+    <corners android:radius="15dp" />
+</shape>
