--- a/app/src/main/res/layout/dialog_slide.xml
+++ b/app/src/main/res/layout/dialog_slide.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/selector_linearlayout_bg"
         android:gravity="center">
 
         <TextView
