--- a/app/src/main/res/layout/dialog_add_photo.xml
+++ b/app/src/main/res/layout/dialog_add_photo.xml
@@ -10,38 +10,73 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:background="@drawable/selector_linearlayout_bg">
 
-        <Button
-            android:id="@+id/btn_add_photo"
+        <LinearLayout
+            android:id="@+id/ll_add_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="添加"
-            android:textColor="@color/black"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="#00000000"/>
+            android:padding="5dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/iv_add_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icon_shift_out"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="20dp"/>
+
+            <Button
+                android:id="@+id/btn_add_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="添加"
+                android:textColor="@color/black"
+                android:gravity="center_vertical"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#00000000"
+                android:duplicateParentState="true"
+                android:clickable="false"
+                android:layout_marginRight="20dp"/>
+
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/holo_blue_light"/>
 
-        <Button
-            android:id="@+id/btn_clear_slide"
+        <LinearLayout
+            android:id="@+id/ll_clear_slide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="清空画框"
-            android:textColor="@color/black"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:background="#00000000"/>
+            android:padding="5dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icon_clear"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="20dp"/>
+
+            <Button
+                android:id="@+id/btn_clear_slide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="清空画框"
+                android:textColor="@color/black"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center_vertical"
+                android:background="#00000000"
+                android:duplicateParentState="true"
+                android:clickable="false"
+                android:layout_marginRight="20dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
