--- a/app/src/main/res/drawable/selector_photo_linearlayout_first_bg.xml
+++ b/app/src/main/res/drawable/selector_photo_linearlayout_first_bg.xml
@@ -4,12 +4,14 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
+            <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/holo_blue_light" />
+            <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
         </shape>
     </item>
 
