--- a/app/src/main/res/layout/activity_slide.xml
+++ b/app/src/main/res/layout/activity_slide.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,8 +16,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="78sp"
-        android:text="00:00"
-        android:layout_marginLeft="50dp"
+        android:text="@string/string_zero_time"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"/>
 
 </RelativeLayout>
