--- a/app/src/main/res/layout/dialog_add_photo.xml
+++ b/app/src/main/res/layout/dialog_add_photo.xml
@@ -24,14 +24,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/icon_shift_out"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="20dp" />
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:contentDescription="@string/string_image_icon" />
 
             <Button
                 android:id="@+id/btn_add_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="添加"
+                android:text="@string/string_add"
                 android:textColor="@color/black"
                 android:gravity="center_vertical"
                 android:paddingTop="10dp"
@@ -39,7 +40,7 @@
                 android:background="#00000000"
                 android:duplicateParentState="true"
                 android:clickable="false"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
 
         </LinearLayout>
 
@@ -60,14 +61,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/icon_clear"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="20dp"/>
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:contentDescription="@string/string_image_icon" />
 
             <Button
                 android:id="@+id/btn_clear_slide"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="清空画框"
+                android:text="@string/string_clear_frame"
                 android:textColor="@color/black"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -75,7 +77,7 @@
                 android:background="#00000000"
                 android:duplicateParentState="true"
                 android:clickable="false"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
 
         </LinearLayout>
 
