--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_update_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这是标题"
+        android:text="@string/string_dialog_title_default"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:layout_marginTop="10dp"/>
@@ -18,7 +18,7 @@
         android:id="@+id/tv_update_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这是内容"
+        android:text="@string/string_dialog_message_default"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
         android:paddingTop="10dp"
@@ -39,7 +39,7 @@
         android:id="@+id/tv_update_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="100"
+        android:text="@string/string_dialog_progress_full"
         android:textColor="@color/gray"
         android:textSize="12sp"
         android:paddingLeft="5dp"
@@ -49,7 +49,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/holo_blue_light"
+        android:background="@color/deep_blue"
         android:layout_marginTop="10dp"/>
 
     <LinearLayout
@@ -63,14 +63,14 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:background="#00000000"
-            android:text="立即更新"
-            android:textColor="@android:color/holo_blue_light"
+            android:text="@string/string_dialog_update"
+            android:textColor="@color/deep_blue"
             android:textSize="16sp"/>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_blue_light"/>
+            android:background="@color/deep_blue"/>
 
         <Button
             android:id="@+id/btn_exit"
@@ -78,8 +78,8 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:background="#00000000"
-            android:text="取消"
-            android:textColor="@android:color/holo_blue_light"
+            android:text="@string/string_cancel"
+            android:textColor="@color/deep_blue"
             android:textSize="16sp"/>
 
     </LinearLayout>
