--- a/app/src/main/res/layout/item_bottom.xml
+++ b/app/src/main/res/layout/item_bottom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_marginRight="15dp"
+    android:layout_marginEnd="15dp"
     android:fitsSystemWindows="false"
     android:layout_gravity="center">
 
@@ -13,15 +12,15 @@
         android:id="@+id/iv_name"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/nature_circle"
+        android:layout_above="@id/tv_name"
         android:scaleType="centerCrop"
-        android:layout_above="@id/tv_name"/>
+        android:src="@drawable/nature_circle" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="自然风景"
+        android:text="@string/string_nature"
         android:textSize="14sp"
         android:textColor="@color/white"
         android:layout_marginTop="5dp"
